--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     ]
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "ant-design-vue": "^3.2.20",
+    "axios": "^1.4.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.4",
     "uuid": "^9.0.0",
@@ -39,6 +41,7 @@
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "0.1.3",
     "eslint": "^8.43.0",
     "eslint-plugin-prettier": "^4.2.1",
