--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
+    "ignoreDeprecations": "5.0",
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
@@ -13,6 +14,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "verbatimModuleSyntax": true,
     "lib": ["esnext", "dom"],
     "baseUrl": ".",
     "types": ["vite/client", "node"],
